# freya

./: .gitattributes  .gitignore  Cargo.toml  ReadMe.md
src/: args.rs  asm.rs  exec.rs  main.rs  module.rs  multi.rs  native.rs  op.rs  types.rs  utils.rs
src/core/: exec.rs  mod.rs  module.rs  op.rs  types.rs
src/core/exec/: frame.rs  mod.rs  rc.rs
src/emit/: asm.rs  mod.rs  parser.rs  walker.rs
src/native/: iface.rs  mod.rs  napi.rs
test/: collectionutil.fr  collectionutil.s  fib.s  greetings.fys  helloworld.s  listtest.fr  mathtests.fr  mathutil.fr  mathutil.s  naivecollatz.fr  naivecollatz.s  newtonroot.fr  newtonroot.s  piout.s  recur.s  sieveratos.fr  sieveratos.s  stringtest.fr  stringtest.s
test/asm/: argstest.s  helloworld.s  listtest.s  mathtests.s  mathutil.s  newtonroot.s
test/fys/: beginseq.fys  greetings.fys  helloworld.fys
