[package]
name = "freya"
version = "0.2.1"
edition = "2021"
authors = ["nikhilr"]
description = "A simple experimental VM without managed memory."
keywords = ["process virtual machine", "vm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
memmap2 = "0.5.8"
clap = { version = "4.0.32", features = ["derive"] }
paste = "1.0.11"