[package]
name = "freya"
version = "0.2.7"
edition = "2021"
authors = ["nikhilr"]
description = "A simple experimental register-based process virtual machine."
keywords = ["process virtual machine", "vm"]
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
memmap2 = "0.9.4"
clap = { version = "4.5.4", features = ["derive"] }
paste = "1.0.15"
libloading = "0.8.3"
threadpool = "1.8.1"
glob = "0.3.1"
log = "0.4"
pretty_env_logger = "0.4"
tempfile = "3.10.1"